Change Range.getBoundingClientRect() when the first rect is empty

crrev.com/376398 changed Range.getBoundingClientRect() to include the
first rectangle even when it is empty (either width or height is zero.)
This change improves when all rects are empty, but produces undesirable
result when the first rectangle is empty while the rest is not.

This patch changes it to return the first rectangle when all rectangles
are empty, following the spec change in [1].

content_editable_extractor_test.unitjs was reverted to before
crrev.com/376398.

[1] https://github.com/w3c/csswg-drafts/commit/0e7a5cbdea19397086e9423b508fe6f41decdcec

BUG=606662
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/1949373003
Cr-Commit-Position: refs/heads/master@{#393057}

Former-commit-id: 27e0f0178d9c3d13bcd4dc96085cd0a749081d46